--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>backlink identifier</title>
-        <meta name="description" content="hunts the internet for possible links based on a given backlink.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/table.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>backlink identifier</title>
+    <meta name="description" content="hunts the internet for possible links based on a given backlink.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/table.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="manifest" href="favicons/site.webmanifest">
-    </head>
-    <body>
-       <div class="heading">
+</head>
+
+<body>
+    <div class="heading">
         <h1>backlink identifier</h1>
-       <h2><span>hunts</span> the internet for possible links based on a given backlink.</h2>
+        <h2><span>hunts</span> the internet for possible links based on a given backlink.</h2>
     </div>
-        <div class="form">
-            <div style="max-width:794px;flex:1"></div>
-            <div class="input-container">
-                <input type="text" class="input" placeholder ="enter your backlink" required id="txt">
-            </div>
-            <input type="submit" class="button" value="search" id="mybtn">
+    <div class="form">
+        <div style="max-width:794px;flex:1"></div>
+        <div class="input-container">
+            <input type="text" class="input" placeholder="enter your backlink" required id="txt">
         </div>
-        <div id="tableDIV">
-        </div>
-        <div class="accordion-menu">
-            <ul>
-                <li>
-                    <input type="checkbox" checked>
-                    <i class="arrow"></i>
-                    <h2></i>What backlinks does it support ?</h2>
-                    <p>Imgur, Youtube, Tinyurl, Goo.gl, Bit.ly, Pastebin, Mediafire, Mega, Gyazo, Dailymotion, Vimeo, Onion Links, Facebook, Reddit, Lightshot, Dropbox, Discord, IMDB, Pinterest, WhatsApp, Google Drive, Google Slides, Google forms, Google docs, Vocaroo, Clyp, Instagram, ISBN, Notion, Google Meet, Imgflip
-                    </p>
-                </li>
-            </ul>
-        </div>
-        <footer><h2>A project by <span class="names"><a href="https://discordapp.com/users/701408408074584175">Varun Sharma</a></span> and <span class="names"><a href="https://discordapp.com/users/690519146701783042">Kshitij Kapoor</a></span></h2></footer>
-        
-        <script src="index.js"></script>
-    </body>
+        <input type="submit" class="button" value="search" id="mybtn">
+    </div>
+    <div id="tableDIV">
+    </div>
+    <div class="accordion-menu">
+        <ul>
+            <li>
+                <input type="checkbox" checked>
+                <i class="arrow"></i>
+                <h2>What backlinks does it support?</h2>
+                <p>Imgur, Youtube, Tinyurl, Goo.gl, Bit.ly, Pastebin, Mediafire, Mega, Gyazo, Dailymotion, Vimeo, Onion
+                    Links, Facebook, Reddit, Lightshot, Dropbox, Discord, IMDB, Pinterest, WhatsApp, Google Drive,
+                    Google Slides, Google forms, Google docs, Vocaroo, Clyp, Instagram, ISBN, Notion, Google Meet,
+                    Imgflip, Spotify, ControlC, Wheel of Names, ctxt.io, Imgpile
+                </p>
+            </li>
+        </ul>
+    </div>
+    <footer>
+        <h2>A project by <span class="names"><a href="https://discordapp.com/users/701408408074584175">Varun
+                    Sharma</a></span> and <span class="names"><a
+                    href="https://discordapp.com/users/690519146701783042">Kshitij Kapoor</a></span></h2>
+    </footer>
+
+    <script src="index.js"></script>
+</body>
+
 </html>
