--- a/table.html
+++ b/table.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/table.css">
-    </head>
-    <body>
-        <h1>x matches found</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Domain</th>
-                    <th>url</th>
-                </tr>
-            </thead>
-        <tr> 
-            <td>Pastebin</td>
-                <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://pastebin/sexsux</a></td>
-        </tr>
 
-        <tr>
-            <td>Discord</td>
-            <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://discord/sexsux</a></td>
-        </tr>
-        <tr> 
-            <td>Pastebin</td>
-                <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://pastebin/sexsux</a></td>
-        </tr>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/table.css">
+</head>
 
-        <tr>
-            <td>Discord</td>
-            <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://discord/sexsux</a></td>
-        </tr> <tr> 
-            <td>Pastebin</td>
-                <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://pastebin/sexsux</a></td>
-        </tr>
+<body>
+    <h3>6 matches found</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Domain</th>
+                <th>URL</th>
+                <th>Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Pastebin</td>
+                <td><a href="http://pastebin.com/sexsux" target="_blank"
+                        rel="noopener noreferrer">http://pastebin.com/sexsux</a></td>
+                <td>Text</td>
+            </tr>
+            <tr>
+                <td>Discord</td>
+                <td><a href="https://discord.gg/sexsux" target="_blank"
+                        rel="noopener noreferrer">https://discord.gg/sexsux</a></td>
+                <td>Discord Invite</td>
+            </tr>
+            <tr>
+                <td>Cryptx.co</td>
+                <td><a href="https://cryptx.co/sexsux" target="_blank"
+                        rel="noopener noreferrer">https://cryptx.co/sexsux</a></td>
+                <td>Custom URL</td>
+            </tr>
+            <tr>
+                <td>Cryptichunt</td>
+                <td><a href="https://cryptichunt.paradigmclub.co/sexsux" target="_blank"
+                        rel="noopener noreferrer">https://cryptichunt.paradigmclub.co/sexsux</a></td>
+                <td>Custom URL</td>
+            </tr>
+            <tr>
+                <td>Imgur</td>
+                <td><a href="https://imgur.com/sexsux" target="_blank"
+                        rel="noopener noreferrer">https://imgur.com/sexsux</a></td>
+                <td>Image</td>
+            </tr>
+            <tr>
+                <td>Bitly</td>
+                <td><a href="https://bit.ly/sexsux" target="_blank" rel="noopener noreferrer">https://bit.ly/sexsux</a>
+                </td>
+                <td>Shortened Link</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 
-        <tr>
-            <td>Discord</td>
-            <td><a href="http://pastebin.com/sexsux" target="_blank" rel="noopener noreferrer">https://discord/sexsux</a></td>
-        </tr>
-        </table>
-        </body>
 </html>
